--- a/.config/coc/extensions/package.json
+++ b/.config/coc/extensions/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "coc-explorer": ">=0.26.4"
+    "coc-yaml": ">=1.9.0",
+    "coc-html": ">=1.8.0",
+    "coc-emmet": ">=1.1.6",
+    "coc-go": ">=1.3.14"
   }
 }
