--- a/.config/coc/extensions/package.json
+++ b/.config/coc/extensions/package.json
@@ -3,6 +3,9 @@
     "coc-yaml": ">=1.9.0",
     "coc-html": ">=1.8.0",
     "coc-emmet": ">=1.1.6",
-    "coc-go": ">=1.3.14"
+    "coc-go": ">=1.3.14",
+    "coc-diagnostic": ">=0.23.9",
+    "coc-tsserver": ">=2.1.3",
+    "@yaegassy/coc-tailwindcss3": ">=0.5.4"
   }
 }
