--- a/.config/sheldon/plugins.toml
+++ b/.config/sheldon/plugins.toml
@@ -2,3 +2,12 @@
 
 [plugins.powerlevel10k]
 github = 'romkatv/powerlevel10k'
+
+[plugins.zsh-autosuggestions]
+github = 'zsh-users/zsh-autosuggestions'
+
+[plugins.zsh-syntax-highlighting]
+github = 'zsh-users/zsh-syntax-highlighting'
+
+[plugins.zsh-autocomplete]
+github = 'marlonrichert/zsh-autocomplete'
